Remove overflow-x to solve the issue with scrollTo()

--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -21,7 +21,6 @@ body,
   flex-direction: column;
   height: 100%;
   min-height: 100%;
-  overflow-x: hidden;
 }
 
 .content-root > main {
